--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="sidebar">
         <ul class="nav-menu">
-            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#">CV</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact me</a></li>
@@ -19,10 +20,16 @@
     </div>
     <div class="social">
         <ul>
-            <li><a href="www.facebook.com">f</a></li>
-            <li><a href="www.github.com">g</a></li>
-            <li><a href="www.linkedin.com">ln</a></li>
+            <li><a href="https://www.facebook.com/">f</a></li>
+            <li><a href="https://www.github.com">g</a></li>
+            <li><a href="https://www.linkedin.com">ln</a></li>
+            <li><a href="https://www.instagram.com">in</a></li>
         </ul>
+    </div>
+
+    <div class="home-text">
+        <h1>Lorem ipsum dolor sit amet,
+            <br>consectetur adipiscing elit</h1>
     </div>
    
 </body>
