--- a/index.html
+++ b/index.html
@@ -6,30 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Adham Badawy | Computer Science Student</title>
 </head>
 <body>
     <div class="sidebar">
         <ul class="nav-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="#">Portfolio</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#">CV</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact me</a></li>
         </ul>
     </div>
     <div class="social">
         <ul>
-            <li><a href="https://www.facebook.com/">f</a></li>
-            <li><a href="https://www.github.com">g</a></li>
-            <li><a href="https://www.linkedin.com">ln</a></li>
-            <li><a href="https://www.instagram.com">in</a></li>
+            <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
+            <li><a href="https://www.github.com" class="fa fa-github"></a></li>
+            <li><a href="https://www.linkedin.com" class="fa fa-linkedin"></a></li>
+            <li><a href="https://www.instagram.com" class="fa fa-instagram"></a></li>
         </ul>
     </div>
 
     <div class="home-text">
-        <h1>Lorem ipsum dolor sit amet,
-            <br>consectetur adipiscing elit</h1>
+        <h1>Hi ,<br>I'm Adham</h1>
+            <br><h4>Computer Science Student</h4>
+            <br><br><button class="contactbtn">Contact Me !</button>
+            <div class="contact-me">
+                <h2>Contact me</h2>
+                <h4>I'm currently interested in internships</h4>
+                <form action="get" class="form" id="contact-form">
+                    <div class="contact-form">
+                        <input type="text" placeholder="Name" class="small-input">
+                        <input type="text" placeholder="Email" class="small-input">
+                        <br> <input type="text" placeholder="Subject" class="large-input">
+                    </div>
+            </form>    
+            <textarea form="contact-form" class="large-input" placeholder="Message"></textarea>
+        </div>
     </div>
    
 </body>
