--- a/index.html
+++ b/index.html
@@ -21,28 +21,54 @@
     </div>
     <div class="social">
         <ul>
-            <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
-            <li><a href="https://www.github.com" class="fa fa-github"></a></li>
             <li><a href="https://www.linkedin.com" class="fa fa-linkedin"></a></li>
+            <li><a href="https://www.github.com" class="fa fa-github"></a></li>
+            <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
             <li><a href="https://www.instagram.com" class="fa fa-instagram"></a></li>
         </ul>
     </div>
 
-    <div class="home-text">
-        <h1>Hi ,<br>I'm Adham</h1>
+    <div class="mainpage">
+        <div class="home">
+        <h1>Hello ,<br>I'm Adham</h1>
             <br><h4>Computer Science Student</h4>
             <br><br><button class="contactbtn">Contact Me !</button>
+        </div>
+            <div class="about">
+                <h1>About Me</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt eius a cumque dignissimos quos voluptates architecto temporibus excepturi maiores sapiente, numquam sequi placeat iusto nihil? Porro id aliquid aut!
+                </p>
+
+            </div>
+
+            <div class="portfolio">
+                <h1>Education <br>& Experience</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt eius a cumque dignissimos quos voluptates architecto temporibus excepturi maiores sapiente, numquam sequi placeat iusto nihil? Porro id aliquid aut!
+                </p>
+
+            </div>
+
+            <div class="projects">
+                <h1>My Projects</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt eius a cumque dignissimos quos voluptates architecto temporibus excepturi maiores sapiente, numquam sequi placeat iusto nihil? Porro id aliquid aut!
+                </p>
+
+            </div>
+
             <div class="contact-me">
-                <h2>Contact me</h2>
-                <h4>I'm currently interested in internships</h4>
+                <h1>Contact me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quasi perferendis dolor facilis est numquam culpa, ipsum enim, nobis quis necessitatibus, inventore beatae omnis molestiae quam nihil sunt corporis voluptate.</p>
                 <form action="get" class="form" id="contact-form">
                     <div class="contact-form">
                         <input type="text" placeholder="Name" class="small-input">
-                        <input type="text" placeholder="Email" class="small-input">
+                        <input type="text" placeholder="Email" class="medium-input">
                         <br> <input type="text" placeholder="Subject" class="large-input">
                     </div>
             </form>    
-            <textarea form="contact-form" class="large-input" placeholder="Message"></textarea>
+            <textarea form="contact-form" class="msg-input" placeholder="Message"></textarea>
         </div>
     </div>
    
