--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Adham Badawy | Computer Science Student</title>
 </head>
 <body>
+    <section>
     <div class="sidebar">
         <ul class="nav-menu">
             <li><a href="#">Home</a></li>
@@ -71,6 +72,6 @@
             <textarea form="contact-form" class="msg-input" placeholder="Message"></textarea>
         </div>
     </div>
-   
+</section>
 </body>
 </html>
