--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Adham Badawy | Computer Science Student</title>
+    <title>Adham Badawy | Portfolio</title>
 </head>
 <body>
     <section>
@@ -32,9 +32,10 @@
     <div class="mainpage">
         <div class="home">
         <h1>Hello ,<br>I'm Adham</h1>
-            <br><h4>Computer Science Student</h4>
+            <br><h4>Computer Science Student / Programmer</h4>
             <br><br><button class="contactbtn">Contact Me !</button>
         </div>
+
             <div class="about">
                 <h1>About Me</h1>
                 <p>
@@ -62,16 +63,14 @@
             <div class="contact-me">
                 <h1>Contact me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quasi perferendis dolor facilis est numquam culpa, ipsum enim, nobis quis necessitatibus, inventore beatae omnis molestiae quam nihil sunt corporis voluptate.</p>
-                <form action="get" class="form" id="contact-form">
-                    <div class="contact-form">
+                <form action="#" class="form" id="contact-form">
                         <input type="text" placeholder="Name" class="small-input">
-                        <input type="text" placeholder="Email" class="medium-input">
-                        <br> <input type="text" placeholder="Subject" class="large-input">
-                    </div>
-            </form>    
-            <textarea form="contact-form" class="msg-input" placeholder="Message"></textarea>
+                        <input type="email" placeholder="Email" class="medium-input">
+                        <input type="text" placeholder="Subject" class="large-input">
+                        <textarea form="contact-form" class="msg-input" placeholder="Message"></textarea>
+                        <br><input type="submit" class="contactbtn" value="Send Message">    
+                </form>  
         </div>
     </div>
-</section>
 </body>
 </html>
