--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Adham Badawy | Portfolio</title>
+    <title>Portfolio | Adham Badawy</title>
 </head>
 <body>
     <section>
     <div class="sidebar">
         <ul class="nav-menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact me</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact me</a></li>
         </ul>
     </div>
     <div class="social">
@@ -36,7 +36,7 @@
             <br><br><button class="contactbtn">Contact Me !</button>
         </div>
 
-            <div class="about">
+            <div id="about" class="about">
                 <h1>About Me</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt eius a cumque dignissimos quos voluptates architecto temporibus excepturi maiores sapiente, numquam sequi placeat iusto nihil? Porro id aliquid aut!
@@ -44,7 +44,7 @@
 
             </div>
 
-            <div class="portfolio">
+            <div id="portfolio" class="portfolio">
                 <h1>Education <br>& Experience</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt eius a cumque dignissimos quos voluptates architecto temporibus excepturi maiores sapiente, numquam sequi placeat iusto nihil? Porro id aliquid aut!
@@ -52,7 +52,7 @@
 
             </div>
 
-            <div class="projects">
+            <div id="projects" class="projects">
                 <h1>My Projects</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt eius a cumque dignissimos quos voluptates architecto temporibus excepturi maiores sapiente, numquam sequi placeat iusto nihil? Porro id aliquid aut!
@@ -60,7 +60,7 @@
 
             </div>
 
-            <div class="contact-me">
+            <div id="contact" class="contact-me">
                 <h1>Contact me</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quasi perferendis dolor facilis est numquam culpa, ipsum enim, nobis quis necessitatibus, inventore beatae omnis molestiae quam nihil sunt corporis voluptate.</p>
                 <form action="#" class="form" id="contact-form">
